# zufang-cli

./: README.md  README.zh-CN.md  pyproject.toml
skills/zufang-cli/: SKILL.md
skills/zufang-cli/agents/: openai.yaml
skills/zufang-cli/references/: commands.md
tests/: test_cli.py  test_parsers.py
zufang_cli/: cache.py  cli.py  constants.py  exceptions.py  http.py  models.py  output.py  query.py  service.py
zufang_cli/commands/: _common.py  meta.py  search.py
zufang_cli/providers/: __init__.py  anjuke.py  base.py  beike_like.py  ke.py  leyoujia.py  lianjia.py  qfang.py  routing.py  zufun.py
